--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   <%= javascript_include_tag "/javascripts/translations.js" %>
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "vendor/modernizr" %>
+  <%= analytics_init %>
+
   <%= csrf_meta_tags %>
 
   <script type="text/javascript">
