custom date fix

--- a/app/views/shared/_datepicker.html.erb
+++ b/app/views/shared/_datepicker.html.erb
@@ -19,5 +19,5 @@
     </tbody>
   </table>
   <a class="close-reveal-modal">&#215;</a>
-  <a href="#" class="button tinier" onclick="$('#datepickerModal').foundation('reveal', 'close');">OK</a>
+  <a href="#" class="button tinier" onclick="if (valid_date_time()) { update_all_charts()};$('#datepickerModal').foundation('reveal', 'close');">OK</a>
 </div>
