--- a/app/views/dashboard/employees_list.html.haml
+++ b/app/views/dashboard/employees_list.html.haml
@@ -1,7 +1,7 @@
 .title
   %h1
     = t :employee, scope: :menu
-%table{width: "100%"}
+%table{width: "100%", id: "employees_table", class:"tablesorter" }
   %thead
     %th
       =t "tables.person.name"
