--- a/app/views/shared/_modals.html.erb
+++ b/app/views/shared/_modals.html.erb
@@ -15,6 +15,7 @@
 </div>
 
 <div id="rated_error" class="reveal-modal tiny new-rating-modals" data-reveal>
+  <a class="close-reveal-modal">&#215;</a>
   <h2><%= t :error, scope: [:rating] %></h2>
   <p><%= t :rated, scope: [:rating] %></p>
 </div>
